feat: harden FitSphere for production-ready GitHub baseline Backend hardening: - remove placeholder password storage from userservice user model and sync DTOs - remove password fields from gateway/userservice user responses - derive effective user identity from validated Keycloak JWT subject - add Keycloak realm role support with FIT_USER and FIT_ADMIN roles - enforce gateway authorization for authenticated API access - add self-or-admin authorization checks for user, activity, and recommendation reads - add internal service authentication using X-Internal-Token - propagate X-User-ID, X-User-Roles, and X-Correlation-ID through downstream calls - add consistent structured error responses across services - add bounded timeout/retry handling for user-service and Gemini calls - classify Gemini provider failures and log concise fallback warnings - keep AI recommendation generation resilient with default fallback recommendations - add RabbitMQ dead-letter queue support for activity processing - make AI recommendation processing idempotent by activityId Frontend: - redesign the React dashboard experience with improved login, activity logging,   activity list, detail, loading, empty, and error states - fix Keycloak login/logout flow and force real Keycloak logout - remove client-side X-User-ID injection and rely on gateway JWT-derived identity
Deployment and operations:
- add Dockerfiles, docker-compose orchestration, Makefile targets, and env examples
- add Kubernetes base manifests and production overlay
- add ingress, probes, HPA, PDB, ConfigMap, secret example, ServiceMonitor, and alert rules
- add GHCR image release workflow and manual Kubernetes deploy workflow
- expose Prometheus actuator endpoints and add operational logging correlation
- add service-specific CI workflows
- add .gitignore and .gitattributes for clean GitHub hygiene

Documentation:
- rewrite README with project overview, service map, endpoints, local setup,
  deployment guidance, security model, and 